# waveshare-13_3-epd

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
convert/: Cargo.toml
convert/.cargo/: config.toml
convert/convert-cli/: Cargo.toml
convert/convert-cli/src/: main.rs
convert/src/: display_constants.rs  lib.rs  main.rs
convert/src/color/: color_histogram_eq.rs  display_color.rs  e_paper_color_map.rs  mod.rs
display/: Cargo.toml  Cross.toml  build.rs  schedule.crontab
display-server/: Cargo.toml
display-server/src/: main.rs
display-server/static/: index.html
display/crontabs/: einkdisplay
display/src/: display_constants.rs  main.rs
display/src/e_paper_display_driver/: bcm2835.rs  bcm_driver.rs  bit_bang_driver.rs  gpio_pin.rs  mod.rs  waveshare.rs
server/: Cargo.toml
server/etc/: webserver.service
server/src/: main.rs
server/static/: index.html
src/: color.rs  convert.rs  display_constants.rs  e_paper_display.rs  main.rs
src/color/: display_color.rs  mod.rs
src/constants/: command_code.rs  data.rs  known_pin.rs  mod.rs
src/e_paper_display/: color.rs  command_code.rs  gpio_pin.rs  mod.rs
src/e_paper_display_driver/: bcm2835.rs  bcm_c.rs  bit_bang_driver.rs  command_code.rs  gpio_pin.rs  mod.rs
src/image/: color.rs
