[package]
name = "eink-display"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5.48", features = ["derive"] }
image = { version = "^0.25.8" }
palette = { version = "^0.7.6" }
thiserror = { version = "^2.0.17" }
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.20" }

[features]
display = [
]

[[bin]]
name = 'display'
path = "src/main.rs"
required-features = ["display"]

[[bin]]
name = 'convert'
path = "src/convert.rs"