[package]
name = "eink-display"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5.48", features = ["derive"] }
image = { version = "^0.25.8", optional = true }
palette = { version = "^0.7.6" , optional = true}
thiserror = { version = "^2.0.17" }
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.20" }

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }


[features]
convert = [
    "dep:image",
    "dep:palette"
]

[[bin]]
name = 'display'
path = "src/main.rs"

[[bin]]
name = 'convert'
path = "src/convert.rs"
required-features = ["convert"]