[package]
name = "eink-convert"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5.48", features = ["derive"] }
thiserror = { version = "^2.0.17" }
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.20" }
image = { version = "^0.25.8" }
palette = { version = "^0.7.6" }

