[package]
name = "display-server"
version = "0.1.0"
edition = "2024"

[dependencies]
#serde = { version = "^1.0.228", features = ["derive"] }
actix-files = { version = "^0.6.8" }
actix-multipart = { version = "^0.7.2" }
actix-web = { version = "^4.11.0" }
actix-web-httpauth = { version = "^0.8.2" }
eink-convert = { version = "*", path = "../convert" }
env_logger = { version = "^0.11.8" }
image = { version = "0.25.8" }
log = { version = "^0.4.28" }
thiserror = { version = "^2.0.17" }
tokio = { version = "1.47.1", features = ["full"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
runner = "qemu-user"
